Fixed bug #70689 (Exception handler does not work as expected)